# sonic

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yaml  pytest.yaml  tox.yaml
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
examples/: audio.py
html/.doctrees/source/: index.doctree
paper/: paper.md  reference.bib
sonic/: __init__.py  audio.py  models.py  sonic.py  utilities.py
sonic/database/: channel.py  classification.py  event.py  file.py  sample.py  sensor.py  subject.py
sonicdb/: __init__.py  audio.py  models.py  sonic.py
sonicdb/database/: base.py  channel.py  classification.py  event.py  file.py  sample.py  sensor.py  subject.py
tests/: __init__.py  test_sonic.py  test_utilities.py
