[tool.poetry]
name = "sonicdb"
version = "0.1.0"
description = "SONIC is a Python package that leverages relational databases to accommodate the storage and retrieval of audio files."
authors = ["daniel kadyrov <daniel.kadyrov@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/dkadyrov/sonicdb"
repository = "https://github.com/dkadyrov/sonicdb"
documentation = "https://sonicdb.readthedocs.io/en/latest/"

include = [
    "LICENSE.md"
]

[tool.poetry.dependencies]
python = "^3.12"
librosa = "^0.10.2.post1"
pandas = "^2.2.3"
pydub = "^0.25.1"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
noisereduce = "^3.0.2"
soundfile = "^0.12.1"
scipy = "^1.14.1"
furo = "^2024.8.6"

[tool.poetry.dev-dependencies]
pytest= "^8.3.3"
sphinx= "^8.0.2"
furo = "^2024.8.6"
sphinx-autobuild = "^2024.9.19"
ruff = "^0.6.8"
mypy = "^1.11.2"
myst-parser = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"